changed general file path

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "\n",
     "\n",
-    "path = '/Users/jun/phd_permafrost/data'\n",
+    "path = '/Users/own/data/path'\n",
     "\n",
     "# Define file paths in a dictionary\n",
     "filepaths = {\n",
